changed routes for images

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 
     <title>QR code component</title>
     <link rel="stylesheet" href="style.css" />
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/ico" href="/images/favicon-32x32.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/ico" href="images/favicon-32x32.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -18,7 +21,11 @@
       <div class="qr-code-container">
         <div class="qr-code-card">
           <div class="qr-code-content">
-            <img class="qr-code-image" src="/images/image-qr-code.png" alt="qrcode" />
+            <img
+              class="qr-code-image"
+              src="images/image-qr-code.png"
+              alt="qrcode"
+            />
             <h2 class="qr-code-heading">
               Improve your front-end skills by building projects
             </h2>
