--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <title>QR code component</title>
+
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" type="image/ico" href="images/favicon-32x32.png" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
@@ -17,25 +16,33 @@
   </head>
 
   <body>
-    <section>
-      <div class="qr-code-container">
-        <div class="qr-code-card">
-          <div class="qr-code-content">
-            <img
-              class="qr-code-image"
-              src="images/image-qr-code.png"
-              alt="qrcode"
-            />
-            <h1 class="qr-code-heading">
-              Improve your front-end skills by building projects
-            </h1>
-            <p class="qr-code-paragraph">
-              Scan the QR code to visit Frontend Mentor and take your coding
-              skills to the next level
-            </p>
-          </div>
+    <main>
+      <section>
+        <div class="qr-code-container">
+          <article class="qr-code-card">
+            <figure class="qr-code-content">
+              <img
+                class="qr-code-image"
+                src="images/image-qr-code.png"
+                alt="qrcode"
+              />
+              <figcaption>
+                <h1 class="qr-code-heading">
+                  Improve your front-end skills by building projects
+                </h1>
+                <p class="qr-code-paragraph">
+                  Scan the QR code to visit Frontend Mentor and take your coding
+                  skills to the next level
+                </p>
+              </figcaption>
+            </figure>
+          </article>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2023 ULI B</p>
+    </footer>
   </body>
 </html>
